chore: update lit-* dependencies, wip

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "analyze": "lit-analyzer 'packages/*/src/**/!(*.css).ts'",
         "analyze:quick": "lit-analyzer \"packages/*/src/!(*.css).ts\"",
         "get-ready": "yarn build:clear-cache && run-p process-icons process-spectrum && yarn build",
-        "postinstall": "yarn get-ready",
+        "postinstall": "patch-package && yarn get-ready",
         "spectrum-vars": "node ./scripts/spectrum-vars.js",
         "spectrum-css": "node ./scripts/process-spectrum-css.js",
         "process-spectrum": "yarn spectrum-vars && yarn spectrum-css && pretty-quick --pattern \"packages/**/*.css\"",
@@ -69,7 +69,8 @@
         "test:build": "tsc --build test/tsconfig-plugins.json && tsc --build test/tsconfig-test.json",
         "test:ci": "yarn test:build && yarn test:start",
         "test:start": "web-test-runner",
-        "test:watch": "run-p watch 'test:build -w' 'test:start --watch --group unit'",
+        "test:watch:focus": "run-p watch 'test:build -w' 'test:start --watch --group {1}' --",
+        "test:watch": "test:watch:focus unit",
         "test:bench": "node test/benchmark/cli.js",
         "pretest:visual": "yarn build && yarn storybook:stories:build && yarn test:build",
         "test:visual": "yarn test:visual:ci",
@@ -163,8 +164,7 @@
         "lerna": "^3.20.2",
         "linebyline": "^1.3.0",
         "lit-analyzer": "^1.2.1",
-        "lit-element": "^2.4.0",
-        "lit-html": "^1.0.0",
+        "lit": "^2.0.0-pre.2",
         "lodash": "^4.17.15",
         "lunr": "^2.3.8",
         "markdown-loader": "^5.1.0",
@@ -174,6 +174,7 @@
         "netlify-cli": "^3.13.1",
         "node-fetch": "^2.6.0",
         "npm-run-all": "^4.1.5",
+        "patch-package": "6.4.7",
         "playwright": "^1.9.2",
         "plugin-error": "^1.0.1",
         "pngjs": "^6.0.0",
