--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -46,8 +46,7 @@
     "author": "",
     "license": "Apache-2.0",
     "dependencies": {
-        "lit-element": "^2.4.0",
-        "lit-html": "^1.0.0",
+        "lit": "^2.0.0-pre.2",
         "tslib": "^2.0.0"
     }
 }
