--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -44,6 +44,7 @@
     "license": "Apache-2.0",
     "devDependencies": {
         "@spectrum-css/commons": "^3.0.2",
+        "@spectrum-css/dietvars": "1.0.0-beta.7",
         "@spectrum-css/typography": "^3.0.1",
         "@spectrum-css/vars": "^3.0.1"
     },
