--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -27,6 +27,8 @@
     "exports": {
         ".": "./src/index.js",
         "./src/*": "./src/*",
+        "./diet/*": "./diet/*",
+        "./src/diet/*": "./src/diet/*",
         "./custom-elements.json": "./custom-elements.json",
         "./package.json": "./package.json",
         "./sp-theme": "./sp-theme.js",
@@ -58,8 +60,16 @@
         "./theme-*.ts",
         "./scale-*.js",
         "./scale-*.ts",
+        "./diet/theme-*.js",
+        "./diet/theme-*.ts",
+        "./diet/scale-*.js",
+        "./diet/scale-*.ts",
         "./src/themes.js",
-        "./src/themes.ts"
+        "./src/themes.ts",
+        "./src/diet/core.js",
+        "./src/diet/core.ts",
+        "./src/diet/themes.js",
+        "./src/diet/themes.ts"
     ],
     "scripts": {
         "test": "echo \"Error: run tests from mono-repo root.\" && exit 1"
