--- a/packages/iconset/package.json
+++ b/packages/iconset/package.json
@@ -1,60 +1,60 @@
 {
     "name": "@spectrum-web-components/iconset",
+    "version": "0.5.4",
     "publishConfig": {
         "access": "public"
     },
+    "description": "",
+    "license": "Apache-2.0",
     "repository": {
         "type": "git",
         "url": "https://github.com/adobe/spectrum-web-components.git",
         "directory": "packages/iconset"
     },
+    "author": "",
+    "homepage": "https://adobe.github.io/spectrum-web-components/components/iconset",
     "bugs": {
         "url": "https://github.com/adobe/spectrum-web-components/issues"
     },
-    "homepage": "https://adobe.github.io/spectrum-web-components/components/iconset",
-    "keywords": [
-        "spectrum css",
-        "web components",
-        "lit-element",
-        "lit-html"
-    ],
-    "version": "0.5.4",
-    "description": "",
     "main": "./src/index.js",
     "module": "./src/index.js",
-    "types": "./src/index.d.ts",
     "exports": {
         ".": "./src/index.js",
         "./src/*": "./src/*",
         "./custom-elements.json": "./custom-elements.json",
         "./package.json": "./package.json"
     },
-    "files": [
-        "custom-elements.json",
-        "*.d.ts",
-        "*.js",
-        "*.js.map",
-        "/src/"
-    ],
-    "sideEffects": [
-        "./src/index.js",
-        "./src/index.ts",
-        "./stories/icons-demo.js",
-        "./stories/icons-demo.ts"
-    ],
     "scripts": {
         "test": "echo \"Error: run tests from mono-repo root.\" && exit 1"
     },
-    "author": "",
-    "license": "Apache-2.0",
+    "files": [
+        "*.d.ts",
+        "*.js",
+        "*.js.map",
+        "/src/",
+        "custom-elements.json"
+    ],
+    "keywords": [
+        "spectrum css",
+        "web components",
+        "lit-element",
+        "lit-html"
+    ],
+    "dependencies": {
+        "@spectrum-web-components/base": "^0.4.2",
+        "tslib": "^2.0.0"
+    },
     "devDependencies": {
         "@spectrum-web-components/field-label": "^0.4.2",
         "@spectrum-web-components/icon": "^0.9.4",
         "@spectrum-web-components/search": "^0.8.4",
         "@spectrum-web-components/styles": "^0.9.3"
     },
-    "dependencies": {
-        "@spectrum-web-components/base": "^0.4.2",
-        "tslib": "^2.0.0"
-    }
+    "types": "./src/index.d.ts",
+    "sideEffects": [
+        "./src/index.js",
+        "./src/index.ts",
+        "./stories/icons-demo.js",
+        "./stories/icons-demo.ts"
+    ]
 }
