--- a/packages/color-slider/package.json
+++ b/packages/color-slider/package.json
@@ -24,12 +24,13 @@
     "module": "src/index.js",
     "type": "module",
     "exports": {
-        "./src/": "./src/index.js",
-        "./custom-elements.json": "./custom-elements.json",
+        ".": "./src/index.js",
+        "./src/*": "./src/*",
         "./package.json": "./package.json",
         "./sp-color-slider": "./sp-color-slider.js",
         "./sp-color-slider.js": "./sp-color-slider.js"
     },
+    "customElementsManifest": "custom-elements.json",
     "files": [
         "custom-elements.json",
         "*.d.ts",
