--- a/packages/modal/package.json
+++ b/packages/modal/package.json
@@ -24,9 +24,8 @@
     "module": "src/modal.css.js",
     "type": "module",
     "exports": {
-        ".": "./src/index.js",
+        ".": "./src/modal.css.js",
         "./src/*": "./src/*",
-        "./custom-elements.json": "./custom-elements.json",
         "./package.json": "./package.json"
     },
     "files": [
